--- a/.github/workflows/send-daily.yml
+++ b/.github/workflows/send-daily.yml
@@ -1,5 +1,5 @@
 # Send the daily Spanish verb exercise email once per day.
-# State is written to .github/spanish-verb-state.json and committed so check-replies can use it.
+# You practice and get evaluated in ChatGPT (or elsewhere).
 
 name: Send daily exercise
 
@@ -12,12 +12,8 @@ on:
 jobs:
   send:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: actions/setup-python@v5
         with:
@@ -31,13 +27,4 @@ jobs:
           EMAIL_USER: ${{ secrets.EMAIL_USER }}
           EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
           TARGET_EMAIL: ${{ secrets.TARGET_EMAIL }}
-          STATE_FILE: .github/spanish-verb-state.json
         run: python main.py send-daily
-
-      - name: Commit and push state
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add .github/spanish-verb-state.json
-          git diff --staged --quiet || git commit -m "chore: update state after send-daily"
-          git push
